# lolo

./: .gitignore  README.md  go.sum  lolo  main.go  pyproject.toml  ruff.toml
services/crawler/: .editorconfig  .env  docker-compose.yml  pyproject.toml
services/crawler/alembic/: env.py
services/crawler/alembic/versions/: 1c286dd689e5_sp001_init_models.py  5ba35a936880_initial_tables.py
services/crawler/docs/: database.drawio
services/crawler/src/crawler_service/api/: tasks.py
services/crawler/src/crawler_service/core/: config.py  database.py  logger.py  scheduler.py  task_manager.py
services/crawler/src/crawler_service/models/: __init__.py  agent.py  base.py  enum.py  task.py  task_execution.py  task_log.py
services/crawler/src/crawler_service/schemas/: __init__.py  agent.py  task.py
