[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.18.4",
  "apscheduler>=3.11.2",
  "fastapi[standard]>=0.129.2",
  "loguru>=0.7.3",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.13.1",
  "sqlalchemy>=2.0.46",

  # shared packages
  "shared-utils",
]

[tool.uv.sources]
shared-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler_service"]
